--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -599,6 +599,18 @@ strong {
   font-weight: 600;
 }
 
+.number {
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  font-size: 1.125rem;
+  border-radius: 9999px;
+  line-height: 2rem;
+  margin-right: 0.75rem;
+}
+
 .container {
   width: 100%;
   margin-right: auto;
